--- a/id-breakdown.html
+++ b/id-breakdown.html
@@ -357,16 +357,15 @@
                 </div>
             </main>
 
-            <!-- Footer -->
-            <footer class="bg-white border-t border-gray-200 footer">
-                <div class="flex items-center justify-between">
-                    <div class="flex items-center gap-2">
+            <footer class="px-4 py-3 bg-white border-t border-gray-200 footer">
+                <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
+                    <div class="flex flex-wrap items-center gap-2">
                         <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
                         <span class="text-sm font-semibold">IDBox™ Service Monitoring</span>
-                        <span class="text-xs leading-normal text-gray-500">v.2.1</span>
+                        <span class="text-xs text-gray-500">v.2.1</span>
                     </div>
-                    <div class="text-sm text-gray-500">
-                        © <span id="year"></span> Intelli Group All rights reserved
+                    <div class="text-sm text-left text-gray-500 md:text-right">
+                        © <span id="year"></span> Intelli Group. All rights reserved.
                     </div>
                 </div>
             </footer>
