add changes in the data set and make it responsive for the clear view

--- a/index.html
+++ b/index.html
@@ -431,10 +431,11 @@
               </div>
             </div>
 
+           
             <!-- Bar Chart Card -->
             <div
-              class="bg-white rounded-xl flex justify-center items-center p-6 shadow-sm hover:shadow-md transition-shadow duration-300 min-h-[350px] w-full mx-auto">
-              <div id="responseBarChartww" class="w-full h-[320px]"></div>
+              class="flex flex-col items-center justify-center w-full p-6 mx-auto transition-shadow duration-300 bg-white shadow-sm item rounded-xl hover:shadow-md ">
+              <div id="responseBarChartww" class="w-full"></div>
             </div>
           </div>
 
