--- a/abandoned-by-customer.html
+++ b/abandoned-by-customer.html
@@ -352,9 +352,9 @@
                     </div>
                     <div class="flex justify-between gap-6 p-6 bg-white shadow main-div rounded-2xl">
                         <!-- KPI Cards -->
-                        <div class="flex flex-col gap-6 left-cards text-fonts max-w-[400px] w-full min-w-[400px]">
+                        <div class="flex flex-col w-full gap-6 overflow-x-auto max-w-[400px] left-cards text-fonts">
                             <div
-                                class="bg-white rounded-xl shadow flex justify-normal items-center  hover:scale-100 transition-transform flex-1 min-h-[350px]">
+                                class="flex items-center flex-1 w-full transition-transform bg-white shadow rounded-xl justify-normal hover:scale-100">
                                 <div id="bar-containersd" class="w-full"></div>
                             </div>
                         </div>
