add changes in the chart alignemnet

--- a/video-call-waiting.html
+++ b/video-call-waiting.html
@@ -393,10 +393,10 @@
                         </div>
 
                         <!-- Chart Section -->
-                        <div class="bg-white rounded-lg p-6 shadow flex flex-col justify-center h-[350px]">
-                            <div id="video-waiting-chart" class="w-full h-full"></div>
-                        </div>
 
+                        <div class="flex flex-col justify-center w-full p-6 overflow-x-auto bg-white rounded-lg shadow">
+                            <div id="video-waiting-chart" class="w-full min-w-[360px]"></div>
+                        </div>
                     </div>
                 </div>
             </main>
