make the chart dynamic

--- a/verification-time.html
+++ b/verification-time.html
@@ -395,8 +395,8 @@
                         </div>
 
                         <!-- Right Chart -->
-                        <div class="bg-white rounded-lg p-6 shadow flex flex-col justify-center h-[400px]">
-                            <div id="verification-chart" class="w-full h-full"></div>
+                        <div class="flex flex-col justify-center w-full p-6 overflow-x-auto bg-white rounded-lg shadow">
+                            <div id="verification-chart" class="w-full min-w-[360px]"></div>
                         </div>
                     </div>
                 </div>
