--- a/average-response-time.html
+++ b/average-response-time.html
@@ -328,30 +328,38 @@
             <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
 
                 <div>
-                    <div class="flex flex-col items-start justify-between gap-4 mb-6 md:flex-row md:items-center">
+
+                    <div class="flex flex-col gap-6 mb-6 md:flex-row md:items-center md:justify-between">
+                        <!-- Left Section: Heading -->
                         <div>
                             <h1 class="text-2xl font-bold text-gray-800">Verification Time (SLA)</h1>
                             <p class="text-gray-500">Analysis of verification processing times</p>
                         </div>
-                        <div class="time-period-container">
-                            <label>Define Time Period:</label>
-                            <div class="date-inputs">
-                                <div class="date-wrapper">
-                                    <input type="date" id="from-date" />
+
+                        <!-- Right Section: Date Range Picker -->
+                        <div class="w-full time-period-container md:w-auto">
+                            <label class="hidden mb-2 md:block md:mb-1">Define Time Period:</label>
+
+                            <!-- Dates Wrapper -->
+                            <div class="flex flex-row flex-wrap gap-3 date-inputs sm:flex-row sm:items-center">
+                                <div class="w-full date-wrapper sm:w-auto">
+                                    <input type="date" id="from-date" class="w-full sm:w-auto" />
                                     <label for="from-date" class="placeholder-text">From</label>
                                     <span class="calendar-icon"></span>
                                 </div>
-                                <div class="date-wrapper">
-                                    <input type="date" id="to-date" />
+                                <div class="w-full date-wrapper sm:w-auto">
+                                    <input type="date" id="to-date" class="w-full sm:w-auto" />
                                     <label for="to-date" class="placeholder-text">To</label>
                                     <span class="calendar-icon"></span>
                                 </div>
                             </div>
+
                             <!-- Search Button -->
-                            <button id="search-btn" class="search-button">Search</button>
+                            <button id="search-btn" class="mt-2 search-button sm:mt-3 md:mt-0">
+                                Search
+                            </button>
                         </div>
                     </div>
-
 
                     <div class="dashboard-container">
                         <div class="flex flex-wrap items-center justify-between gap-4 mb-4">
@@ -363,22 +371,28 @@
                                     class="px-4 py-2 font-semibold bg-gray-100 border-b-2 border-transparent tab-btn rounded-t-md">Transactions
                                     Monitoring</button>
                             </div>
-                            <div class="time-period-container">
-                                <label>Define Time Period:</label>
-                                <div class="date-inputs">
-                                    <div class="date-wrapper">
-                                        <input type="date" id="from-date" />
+                            <!-- Right Section: Date Range Picker -->
+                            <div class="w-full time-period-container md:w-auto">
+                                <label class="hidden mb-2 md:block md:mb-1">Define Time Period:</label>
+
+                                <!-- Dates Wrapper -->
+                                <div class="flex flex-row flex-wrap gap-3 date-inputs sm:flex-row sm:items-center">
+                                    <div class="w-full date-wrapper sm:w-auto">
+                                        <input type="date" id="from-date" class="w-full sm:w-auto" />
                                         <label for="from-date" class="placeholder-text">From</label>
                                         <span class="calendar-icon"></span>
                                     </div>
-                                    <div class="date-wrapper">
-                                        <input type="date" id="to-date" />
+                                    <div class="w-full date-wrapper sm:w-auto">
+                                        <input type="date" id="to-date" class="w-full sm:w-auto" />
                                         <label for="to-date" class="placeholder-text">To</label>
                                         <span class="calendar-icon"></span>
                                     </div>
                                 </div>
+
                                 <!-- Search Button -->
-                                <button id="search-btn" class="search-button">Search</button>
+                                <button id="search-btn" class="mt-2 search-button sm:mt-3 md:mt-0">
+                                    Search
+                                </button>
                             </div>
                         </div>
 
@@ -416,7 +430,7 @@
                                         <span class="text-lg font-bold">74%</span>
                                         <span class="text-xs">0–50 secs</span>
                                     </div>
-                                    <div  id="box-50-100"
+                                    <div id="box-50-100"
                                         class="flex flex-col items-center w-full px-3 py-2 mb-2 text-center text-yellow-900 break-words bg-yellow-200 rounded sm:w-auto sm:mb-0 sm:flex-1">
                                         <span class="text-lg font-bold">19%</span>
                                         <span class="text-xs">50–100 secs</span>
@@ -435,17 +449,17 @@
 
             <!-- Footer -->
             <footer class="px-4 py-3 bg-white border-t border-gray-200 footer">
-        <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
-          <div class="flex flex-wrap items-center gap-2">
-            <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
-            <span class="text-sm font-semibold">IDBox™ Service Monitoring</span>
-            <span class="text-xs text-gray-500">v.2.1</span>
-          </div>
-          <div class="text-sm text-left text-gray-500 md:text-right">
-            © <span id="year"></span> Intelli Group. All rights reserved.
-          </div>
-        </div>
-      </footer>
+                <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
+                    <div class="flex flex-wrap items-center gap-2">
+                        <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
+                        <span class="text-sm font-semibold">IDBox™ Service Monitoring</span>
+                        <span class="text-xs text-gray-500">v.2.1</span>
+                    </div>
+                    <div class="text-sm text-left text-gray-500 md:text-right">
+                        © <span id="year"></span> Intelli Group. All rights reserved.
+                    </div>
+                </div>
+            </footer>
         </div>
     </div>
 
