--- a/transactions.html
+++ b/transactions.html
@@ -42,9 +42,8 @@
           class="flex items-center gap-2 px-3 py-2 transition rounded hover:bg-gray-100">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-            class="w-5 h-5 lucide lucide-chart-column"
-            data-lov-id="src\components\Sidebar\Sidebar.tsx:40:12" data-lov-name="BarChart3"
-            data-component-path="src\components\Sidebar\Sidebar.tsx" data-component-line="40"
+            class="w-5 h-5 lucide lucide-chart-column" data-lov-id="src\components\Sidebar\Sidebar.tsx:40:12"
+            data-lov-name="BarChart3" data-component-path="src\components\Sidebar\Sidebar.tsx" data-component-line="40"
             data-component-file="Sidebar.tsx" data-component-name="BarChart3"
             data-component-content="%7B%22className%22%3A%22h-5%20w-5%22%7D">
             <path d="M3 3v16a2 2 0 0 0 2 2h16"></path>
@@ -247,11 +246,12 @@
           <span class="sidebar-label">Success Rate</span>
         </a>
         <a href="/transactions.html" title="Transactions"
-       class="flex items-center gap-2 px-3 py-2 font-semibold transition bg-gray-200 rounded hover:bg-gray-100 sidebar-item active">
+          class="flex items-center gap-2 px-3 py-2 font-semibold transition bg-gray-200 rounded hover:bg-gray-100 sidebar-item active">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-            class="w-5 h-5 lucide lucide-file-text text-[#2563EB]" data-lov-id="src\components\Sidebar\Sidebar.tsx:114:12"
-            data-lov-name="FileText" data-component-path="src\components\Sidebar\Sidebar.tsx" data-component-line="114"
+            class="w-5 h-5 lucide lucide-file-text text-[#2563EB]"
+            data-lov-id="src\components\Sidebar\Sidebar.tsx:114:12" data-lov-name="FileText"
+            data-component-path="src\components\Sidebar\Sidebar.tsx" data-component-line="114"
             data-component-file="Sidebar.tsx" data-component-name="FileText"
             data-component-content="%7B%22className%22%3A%22h-5%20w-5%22%7D">
             <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"></path>
@@ -313,18 +313,38 @@
 
       <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
         <div>
-          <div class="flex flex-col items-start justify-between gap-4 mb-6 md:flex-row md:items-center">
+          <div class="flex flex-col gap-6 mb-6 md:flex-row md:items-center md:justify-between">
+            <!-- Left Section: Heading -->
             <div>
               <h1 class="text-2xl font-bold text-gray-800">Transactions</h1>
               <p class="text-gray-500">Monitoring and analysis of transactions</p>
             </div>
-            <div class="flex items-center gap-2">
-              <span class="text-sm font-medium text-gray-700">Define Time Period:</span>
-              <input type="date" class="px-3 py-1 text-sm border rounded" />
-              <span class="text-gray-500">To</span>
-              <input type="date" class="px-3 py-1 text-sm border rounded" />
+
+            <!-- Right Section: Date Range Picker -->
+            <div class="w-full time-period-container md:w-auto">
+              <label class="hidden mb-2 md:block md:mb-1">Define Time Period:</label>
+
+              <!-- Dates Wrapper -->
+              <div class="flex flex-row flex-wrap gap-3 date-inputs sm:flex-row sm:items-center">
+                <div class="w-full date-wrapper sm:w-auto">
+                  <input type="date" id="from-date" class="w-full sm:w-auto" />
+                  <label for="from-date" class="placeholder-text">From</label>
+                  <span class="calendar-icon"></span>
+                </div>
+                <div class="w-full date-wrapper sm:w-auto">
+                  <input type="date" id="to-date" class="w-full sm:w-auto" />
+                  <label for="to-date" class="placeholder-text">To</label>
+                  <span class="calendar-icon"></span>
+                </div>
+              </div>
+
+              <!-- Search Button -->
+              <button id="search-btn" class="mt-2 search-button sm:mt-3 md:mt-0">
+                Search
+              </button>
             </div>
           </div>
+
 
           <!-- Tabs -->
           <div class="flex mb-6 space-x-4 border-b border-gray-200">
