--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
 
     <div id="sidebar"
-      class="bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
+      class="bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col  overflow-hidden sidebar ">
       <div class="flex items-center justify-between p-4 border-b border-gray-200 sidebar-top">
         <div class="flex items-center gap-2">
           <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
@@ -300,9 +300,7 @@
       <!-- Mobile Header -->
       <header class="flex items-center justify-between px-4 py-3 bg-white border-b md:hidden">
         <div class="flex items-center gap-2">
-          <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor">
-            <circle cx="12" cy="12" r="10" stroke-width="2" />
-          </svg>
+          <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
           <span class="font-semibold text-gray-800">IDBox™</span>
         </div>
         <button onclick="openMobileMenu()" class="p-1 rounded hover:bg-gray-100">
