--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
 
     <div id="sidebar"
-      class="sidebar bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col  overflow-hidden ">
+      class="sidebar bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
       <div class="flex items-center justify-between p-4 border-b border-gray-200 sidebar-top">
         <div class="flex items-center gap-2">
           <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
@@ -310,7 +310,7 @@
         </button>
       </header>
 
-      <main class="flex-1 overflow-y-auto bg-gray-50 p-[24px]">
+      <main class="flex-1 overflow-y-auto bg-gray-50 p-[20px] md:p-6">
         <div>
           <div class="flex flex-col gap-6 mb-6 md:flex-row md:items-center md:justify-between">
             <!-- Left Section: Heading -->
