--- a/settings.html
+++ b/settings.html
@@ -21,13 +21,13 @@
         <!-- Overlay for Mobile -->
         <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
         <div id="sidebar"
-            class="bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
+            class="sidebar bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
             <div class="flex items-center justify-between p-4 border-b border-gray-200 sidebar-top">
                 <div class="flex items-center gap-2">
                     <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
                     <span class="font-bold text-gray-800 sidebar-label">IDBox™</span>
                 </div>
-                <button onclick="toggleCollapse()" class="p-1 rounded-full hover:bg-gray-100">
+                <button id="collapseBtn" class="p-1 rounded-full hover:bg-gray-100">
                     <svg id="collapseIcon" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-gray-500" fill="none"
                         viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
@@ -310,9 +310,7 @@
             <!-- Mobile Header -->
             <header class="flex items-center justify-between px-4 py-3 bg-white border-b md:hidden">
                 <div class="flex items-center gap-2">
-                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor">
-                        <circle cx="12" cy="12" r="10" stroke-width="2" />
-                    </svg>
+                    <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
                     <span class="font-semibold text-gray-800">IDBox™</span>
                 </div>
                 <button onclick="openMobileMenu()" class="p-1 rounded hover:bg-gray-100">
@@ -324,7 +322,7 @@
             </header>
 
             <main class="flex-1 overflow-y-auto bg-gray-50 ">
-                <div class="p-6 font-sans bg-gray-50">
+                <div class="font-sans p-[20px] md:p-6 bg-gray-50">
                     <div class="mb-6">
                         <h1 class="text-2xl font-bold text-gray-800">Settings</h1>
                         <p class="text-gray-500">Manage your application settings</p>
