--- a/transactions.html
+++ b/transactions.html
@@ -24,7 +24,7 @@
     <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
 
     <div id="sidebar"
-      class="bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
+     class="sidebar bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
       <div class="flex items-center justify-between p-4 border-b border-gray-200 sidebar-top">
         <div class="flex items-center gap-2">
           <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
@@ -311,7 +311,7 @@
         </button>
       </header>
 
-      <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
+      <main class="flex-1 p-[20px] md:p-6 overflow-y-auto font-sans bg-gray-50">
         <div>
           <div class="flex flex-col gap-6 mb-6 md:flex-row md:items-center md:justify-between">
             <!-- Left Section: Heading -->
