--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <div
               class="w-full p-4 transition-shadow duration-300 bg-white shadow-sm chart-container rounded-2xl hover:shadow-md">
               <div id="pieCard"
-                class="relative bg-white rounded-[40px] p-12 min-h-[550px] overflow-hidden transition-transform duration-500 ease-in-out hover:scale-[1.02]">
+                class="relative bg-white rounded-[40px] p-0 md:p-12 min-h-[550px] overflow-hidden transition-transform duration-500 ease-in-out hover:scale-[1.02]">
                 <div
                   class="absolute inset-0 bg-[length:40px_40px] bg-[linear-gradient(rgba(0,212,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,212,255,0.03)_1px,transparent_1px)] rounded-[40px] animate-gridMove">
                 </div>
@@ -438,7 +438,7 @@
             <!-- Bar Chart Card -->
 
             <div
-              class="flex flex-col items-center justify-center w-full p-6 mx-auto transition-shadow duration-300 bg-white shadow-sm item rounded-xl hover:shadow-md ">
+              class="flex flex-col items-center justify-center w-full p-2 mx-auto transition-shadow duration-300 bg-white shadow-sm md:p-6 item rounded-xl hover:shadow-md ">
               <div id="responseBarChartww" class="w-full"></div>
             </div>
           </div>
