--- a/index.html
+++ b/index.html
@@ -415,7 +415,27 @@
           <!-- Charts -->
           <div class="grid grid-cols-1 gap-6 mb-6 lg:grid-cols-2">
             <!-- Chart Container -->
-            <div
+            <div class="relative flex items-center justify-center p-6 overflow-hidden bg-white shadow-md rounded-2xl">
+              <!-- Flex container: chart left, legend right -->
+              <div class="flex flex-col items-start gap-6 lg:flex-row">
+                <!-- Pie Chart Container -->
+                <div class="w-full lg:w-full">
+                  <div id="pieCard"
+                    class="relative bg-white rounded-[40px] p-0 overflow-hidden transition-transform duration-500 ease-in-out">
+                    <!-- Chart Canvas -->
+                    <div id="pieContainer" class="relative z-10 w-full h-[380px] bg-transparent rounded-2xl"></div>
+                  </div>
+                  <div id="pieLegend"
+                    class="absolute bottom-0 z-20 p-0 flex items-center gap-4 border border-gray-200 w-[max-content] scrollable-legend  rounded-2xl">
+                  </div>
+                </div>
+
+                <!-- Custom Scrollable Legend -->
+
+              </div>
+            </div>
+
+            <!-- <div
               class="w-full p-4 transition-shadow duration-300 bg-white shadow-sm chart-container rounded-2xl hover:shadow-md">
               <div id="pieCard"
                 class="relative bg-white rounded-[40px] p-0 md:p-12 min-h-[550px] overflow-hidden transition-transform duration-500 ease-in-out hover:scale-[1.02]">
@@ -434,7 +454,7 @@
                 <div id="pieLegend"
                   class="absolute z-20 grid grid-cols-3 gap-4 transform -translate-x-1/2 bottom-6 left-1/2"></div>
               </div>
-            </div>
+            </div> -->
             <!-- Bar Chart Card -->
 
             <div
