--- a/average-response-time.html
+++ b/average-response-time.html
@@ -363,10 +363,10 @@
                         <div class="flex flex-wrap items-center justify-between gap-4 mb-4">
                             <div class="flex gap-2">
                                 <button id="tab-success"
-                                    class="px-4 py-2 font-semibold bg-white border-b-2 border-gray-700 tab-btn active-tab rounded-t-md">Success
+                                    class="px-2 py-2 font-semibold bg-white border-b-2 border-gray-700 md:px-4 tab-btn active-tab rounded-t-md">Success
                                     Rate</button>
                                 <button id="tab-transactions"
-                                    class="px-4 py-2 font-semibold bg-gray-100 border-b-2 border-transparent tab-btn rounded-t-md">Transactions
+                                    class="px-2 py-2 font-semibold bg-gray-100 border-b-2 border-transparent md:px-4 tab-btn rounded-t-md">Transactions
                                     Monitoring</button>
                             </div>
                             <!-- Right Section: Date Range Picker -->
@@ -397,9 +397,9 @@
                         <!-- Grid Layout -->
                         <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
                             <!-- KPI Card -->
-                            <div class="flex flex-col items-center justify-center p-6 bg-white rounded-lg shadow">
+                            <div class="flex flex-col items-center justify-center p-4 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center justify-center mb-2">
-                                    <span class="mr-3 text-4xl font-bold text-green-600">35 sec</span>
+                                    <span class="mr-3 text-2xl font-bold text-green-600 md:text-4xl">35 sec</span>
                                     <span class="px-2 py-1 text-sm font-semibold text-green-700 bg-green-100 rounded">vs
                                         45 sec</span>
                                 </div>
@@ -419,7 +419,7 @@
                             </div>
 
                             <!-- Chart + Legend -->
-                            <div class="p-6 bg-white rounded-lg shadow">
+                            <div class="p-0 bg-white rounded-lg shadow md:p-6">
                                 <div id="response-time-chart" class="w-full h-[350px]"></div>
                                 <div
                                     class="flex flex-col flex-wrap items-stretch justify-center w-full px-2 mt-4 sm:flex-row sm:gap-4">
