--- a/verification-time.html
+++ b/verification-time.html
@@ -365,7 +365,7 @@
                         <div class="flex flex-col gap-6">
 
                             <!-- Average Response Time -->
-                            <div class="flex flex-col gap-2 p-6 bg-white rounded-lg shadow">
+                            <div class="flex flex-col gap-2 p-2 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center gap-2">
                                     <span class="text-4xl font-extrabold text-green-600">186 sec</span>
                                     <span
@@ -382,7 +382,7 @@
                             </div>
 
                             <!-- % Response Time vs SLA -->
-                            <div class="flex flex-col gap-2 p-6 bg-white rounded-lg shadow">
+                            <div class="flex flex-col gap-2 p-2 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center gap-2">
                                     <span class="text-4xl font-extrabold text-green-600">55%</span>
                                     <span
@@ -400,7 +400,7 @@
                         </div>
 
                         <!-- Right Chart -->
-                        <div class="flex flex-col justify-center w-full p-6 overflow-x-auto bg-white rounded-lg shadow">
+                        <div class="flex flex-col justify-center w-full p-0 overflow-x-auto bg-white rounded-lg shadow md:p-6">
                             <div id="verification-chart" class="w-full min-w-[360px]"></div>
                         </div>
                     </div>
