--- a/video-call-waiting.html
+++ b/video-call-waiting.html
@@ -364,7 +364,7 @@
                         <div class="flex flex-col gap-6">
 
                             <!-- Average Waiting Time -->
-                            <div class="flex flex-col gap-2 p-6 bg-white rounded-lg shadow">
+                            <div class="flex flex-col gap-2 p-0 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center gap-2">
                                     <span class="text-5xl font-extrabold text-blue-500">G63 sec</span>
                                     <span
@@ -381,7 +381,7 @@
                             </div>
 
                             <!-- Response Time % vs SLA -->
-                            <div class="flex flex-col gap-2 p-6 bg-white rounded-lg shadow">
+                            <div class="flex flex-col gap-2 p-0 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center gap-2">
                                     <span class="text-4xl font-extrabold text-blue-500">G95%</span>
                                     <span
