--- a/settings.html
+++ b/settings.html
@@ -328,7 +328,7 @@
                         <p class="text-gray-500">Manage your application settings</p>
                     </div>
 
-                    <div class="p-6 bg-white rounded-lg shadow">
+                    <div class="p-0 bg-white rounded-lg shadow md:p-6">
                         <div class="space-y-6">
                             <div class="pb-4 border-b">
                                 <h2 class="mb-2 text-lg font-medium">General Settings</h2>
