makeing the screen responsive

--- a/country-distribution.html
+++ b/country-distribution.html
@@ -356,22 +356,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="p-6 bg-white rounded shadow">
+                <div class="px-2 py-4 bg-white rounded shadow md:p-6">
                     <div class="mb-6 text-center">
-                        <div class="text-4xl font-bold text-gray-700">369</div>
-                        <div class="text-xl text-gray-500">Total Approved Verifications</div>
+                        <div class="text-2xl font-bold text-gray-700 md:text-4xl">369</div>
+                        <div class="text-lg text-gray-500 md:text-xl">Total Approved Verifications</div>
                     </div>
 
                     <div class="overflow-hidden border border-gray-200 rounded-lg">
                         <table class="min-w-full text-sm divide-y divide-gray-200">
                             <thead class="bg-gray-100">
                                 <tr>
-                                    <th class="px-6 py-3 font-medium tracking-wider text-left text-gray-500 uppercase">
+                                    <th
+                                        class="px-3 md:px-6 py-2 md:py-4 text-left text-gray-500 uppercase text-[12px] md:text-[14px] racking-wider font-medium">
                                         Document country</th>
-                                    <th class="px-6 py-3 font-medium tracking-wider text-left text-gray-500 uppercase">#
-                                        verified</th>
-                                    <th class="px-6 py-3 font-medium tracking-wider text-left text-gray-500 uppercase">%
-                                        verified</th>
+                                    <th
+                                        class="px-3 md:px-6 py-2 md:py-4 font-medium tracking-wider text-left text-[12px] md:text-[14px]  text-gray-500 uppercase">
+                                        # verified</th>
+                                    <th
+                                        class="px-3 md:px-6 py-2 md:py-4 font-medium tracking-wider text-left text-[12px] md:text-[14px]  text-gray-500 uppercase">
+                                        % verified</th>
                                 </tr>
                             </thead>
                             <tbody id="country-table" class="bg-white divide-y divide-gray-200">
