--- a/average-response-time.html
+++ b/average-response-time.html
@@ -21,7 +21,7 @@
 <body class="h-screen overflow-hidden font-sans">
     <div class="flex h-screen overflow-hidden">
         <!-- Overlay for Mobile -->
-        <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
+        <div id="overlay" class="fixed inset-0 z-[44] hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
         <div id="sidebar"
             class="sidebar bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
             <div class="flex items-center justify-between p-4 border-b border-gray-200 sidebar-top">
@@ -397,7 +397,8 @@
                         <!-- Grid Layout -->
                         <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
                             <!-- KPI Card -->
-                            <div class="flex flex-col items-center justify-center p-4 bg-white rounded-lg shadow md:p-6">
+                            <div
+                                class="flex flex-col items-center justify-center p-4 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center justify-center mb-2">
                                     <span class="mr-3 text-2xl font-bold text-green-600 md:text-4xl">35 sec</span>
                                     <span class="px-2 py-1 text-sm font-semibold text-green-700 bg-green-100 rounded">vs
