--- a/settings.html
+++ b/settings.html
@@ -19,7 +19,7 @@
 
     <div class="flex h-screen overflow-hidden">
         <!-- Overlay for Mobile -->
-        <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
+        <div id="overlay" class="fixed inset-0 z-[44] hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
         <div id="sidebar"
             class="sidebar bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
             <div class="flex items-center justify-between p-4 border-b border-gray-200 sidebar-top">
@@ -328,7 +328,7 @@
                         <p class="text-gray-500">Manage your application settings</p>
                     </div>
 
-                    <div class="p-0 bg-white rounded-lg shadow md:p-6">
+                    <div class="p-4 bg-white rounded-lg shadow md:p-6">
                         <div class="space-y-6">
                             <div class="pb-4 border-b">
                                 <h2 class="mb-2 text-lg font-medium">General Settings</h2>
