--- a/verification-time.html
+++ b/verification-time.html
@@ -21,7 +21,7 @@
 <body class="h-screen overflow-hidden font-sans">
     <div class="flex h-screen overflow-hidden">
         <!-- Overlay for Mobile -->
-        <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
+        <div id="overlay" class="fixed inset-0 z-[44] hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
 
         <div id="sidebar"
             class="sidebar bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col overflow-hidden">
@@ -400,7 +400,8 @@
                         </div>
 
                         <!-- Right Chart -->
-                        <div class="flex flex-col justify-center w-full p-0 overflow-x-auto bg-white rounded-lg shadow md:p-6">
+                        <div
+                            class="flex flex-col justify-center w-full p-0 overflow-x-auto bg-white rounded-lg shadow md:p-6">
                             <div id="verification-chart" class="w-full min-w-[360px]"></div>
                         </div>
                     </div>
