add changes in the desing

--- a/verification-failure.html
+++ b/verification-failure.html
@@ -362,11 +362,11 @@
                         <!-- Tabs -->
                         <div class="flex gap-2 mb-6">
                             <button
-                                class="px-6 py-2 font-semibold text-blue-600 bg-white border-b-2 border-blue-600 rounded-t-lg shadow">
+                                class="px-3 py-2 font-semibold text-blue-600 bg-white border-b-2 border-blue-600 rounded-t-lg shadow md:px-6 md:py-4">
                                 Success Rate
                             </button>
                             <a href="#"
-                                class="px-6 py-2 text-gray-500 bg-gray-100 border-b-2 border-transparent rounded-t-lg hover:text-blue-600">
+                                class="px-3 py-2 text-gray-500 bg-gray-100 border-b-2 border-transparent rounded-t-lg md:px-6 md:py-4 hover:text-blue-600">
                                 Transactions Monitoring
                             </a>
                         </div>
@@ -381,7 +381,7 @@
 
                             <!-- Pie Chart Card -->
                             <div
-                                class="relative bg-white rounded-[40px] p-6 flex-1 min-h-[550px] justify-normal items-center overflow-hidden border border-transparent transition transform">
+                                class="relative bg-white w-full rounded-[40px] p-0 md:p-6 flex-1 min-[350px] md:min-h-[550px] justify-normal items-center overflow-hidden border border-transparent transition transform">
                                 Animated grid background
                                 <div
                                     class="absolute inset-0 bg-[length:40px_40px] bg-[linear-gradient(rgba(0,212,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,212,255,0.03)_1px,transparent_1px)] rounded-[40px] animate-[gridMove_20s_linear_infinite]">
