--- a/document-breakdown.html
+++ b/document-breakdown.html
@@ -357,7 +357,7 @@
                         </div>
                     </div>
 
-                    <div class="p-6 bg-white border border-gray-200 shadow-sm rounded-2xl">
+                    <div class="p-2 bg-white border border-gray-200 shadow-sm md:p-6 rounded-2xl">
                         <div id="document-breakdown-chart" class="w-full"></div>
                     </div>
                 </div>
