--- a/id-breakdown.html
+++ b/id-breakdown.html
@@ -325,7 +325,6 @@
 
             <main class="flex-1 p-[20px] md:p-6 overflow-y-auto font-sans bg-gray-50">
                 <div>
-
                     <div class="flex flex-col gap-6 mb-6 md:flex-row md:items-center md:justify-between">
                         <!-- Left Section: Heading -->
                         <div>
@@ -357,9 +356,7 @@
                             </button>
                         </div>
                     </div>
-
-
-                    <div class="p-6 bg-white border border-gray-200 shadow-sm rounded-2xl">
+                    <div class="p-2 bg-white border border-gray-200 shadow-sm md:p-6 rounded-2xl">
                         <div id="id-breakdown-chart" class="w-full"></div>
                     </div>
                 </div>
