add responsiveness in the whole layout

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
           <!-- Charts -->
           <div class="grid grid-cols-1 gap-6 mb-6 lg:grid-cols-2">
             <!-- Chart Container -->
-            <div class="relative flex items-center justify-center p-6 overflow-hidden bg-white shadow-md rounded-2xl">
+            <div class="relative flex items-center justify-center p-0 overflow-hidden bg-white shadow-md md:p-6 rounded-2xl">
               <!-- Flex container: chart left, legend right -->
               <div class="flex flex-col items-start gap-6 lg:flex-row">
                 <!-- Pie Chart Container -->
