--- a/success-rate.html
+++ b/success-rate.html
@@ -411,10 +411,10 @@
                     <!-- Charts -->
                     <div>
                         <!-- Success View -->
-                        <div id="view-success" class="grid grid-cols-1 gap-6 space-y-6 view-pane lg:grid-cols-2">
+                        <div id="view-success" class="grid grid-cols-1 gap-3 space-y-6 md:gap-6 view-pane lg:grid-cols-2">
                             <!-- Pie Chart Card -->
                             <div
-                                class="relative bg-white rounded-3xl p-12 min-h-[550px] overflow-hidden border border-gray-100 transition-all">
+                                class="relative bg-white rounded-3xl p-0 md:p-12 min-h-[350px] md:min-h-[550px] overflow-hidden border border-gray-100 transition-all">
                                 <div
                                     class="absolute inset-0 bg-[length:40px_40px] bg-[linear-gradient(rgba(0,212,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,212,255,0.03)_1px,transparent_1px)] animate-[gridMove_20s_linear_infinite] rounded-3xl">
                                 </div>
@@ -441,7 +441,7 @@
 
                             <!-- ✅ Updated Bar Chart Container -->
                             <div id="failureBarCharts"
-                                class="bg-white rounded-xl p-6 shadow min-h-[350px] flex items-center justify-center">
+                                class="bg-white rounded-xl p-0 md:p-6 shadow min-h-[350px] flex items-center justify-center">
                             </div>
                         </div>
 
