--- a/transactions.html
+++ b/transactions.html
@@ -30,7 +30,7 @@
           <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
           <span class="font-bold text-gray-800 sidebar-label">IDBox™</span>
         </div>
-        <button onclick="toggleCollapse()" class="p-1 rounded-full hover:bg-gray-100">
+        <button id="collapseBtn" class="p-1 rounded-full hover:bg-gray-100">
           <svg id="collapseIcon" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-gray-500" fill="none"
             viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
@@ -299,9 +299,7 @@
       <!-- Mobile Header -->
       <header class="flex items-center justify-between px-4 py-3 bg-white border-b md:hidden">
         <div class="flex items-center gap-2">
-          <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor">
-            <circle cx="12" cy="12" r="10" stroke-width="2" />
-          </svg>
+          <i class="fa-regular fa-circle-user text-[#2563EB] text-xl"></i>
           <span class="font-semibold text-gray-800">IDBox™</span>
         </div>
         <button onclick="openMobileMenu()" class="p-1 rounded hover:bg-gray-100">
@@ -399,11 +397,11 @@
 
           <!-- Charts -->
           <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
-            <div class="bg-white p-6 rounded-xl shadow min-h-[320px]">
-              <div id="chart1" style="height: 320px;"></div>
+            <div class="bg-white p-1 md:p-6 rounded-xl shadow min-h-[320px]">
+              <div id="chart1"></div>
             </div>
-            <div class="bg-white p-6 rounded-xl shadow min-h-[320px]">
-              <div id="chart2" style="height: 320px;"></div>
+            <div class="bg-white p-1 md:p-6 rounded-xl shadow min-h-[320px]">
+              <div id="chart2"></div>
             </div>
           </div>
         </div>
