--- a/verification-time.html
+++ b/verification-time.html
@@ -359,15 +359,15 @@
                         </div>
                     </div>
 
-                    <div class="grid grid-cols-1 gap-6 lg:grid-cols-2 dashboard-container">
+                    <div class="grid grid-cols-1 gap-3 md:gap-6 lg:grid-cols-2 dashboard-container">
 
                         <!-- Left KPI Cards -->
-                        <div class="flex flex-col gap-6">
+                        <div class="flex flex-col gap-3 md:gap-6">
 
                             <!-- Average Response Time -->
                             <div class="flex flex-col gap-2 p-2 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center gap-2">
-                                    <span class="text-4xl font-extrabold text-green-600">186 sec</span>
+                                    <span class="text-3xl font-extrabold text-green-600 md:text-4xl">186 sec</span>
                                     <span
                                         class="px-2 py-1 ml-2 text-xs font-semibold text-green-600 bg-green-100 rounded-full">vs
                                         360 sec</span>
@@ -384,7 +384,7 @@
                             <!-- % Response Time vs SLA -->
                             <div class="flex flex-col gap-2 p-2 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center gap-2">
-                                    <span class="text-4xl font-extrabold text-green-600">55%</span>
+                                    <span class="text-3xl font-extrabold text-green-600 md:text-4xl">55%</span>
                                     <span
                                         class="px-2 py-1 ml-2 text-xs font-semibold text-green-600 bg-green-100 rounded-full">vs
                                         85%</span>
