--- a/video-call-waiting.html
+++ b/video-call-waiting.html
@@ -364,9 +364,9 @@
                         <div class="flex flex-col gap-6">
 
                             <!-- Average Waiting Time -->
-                            <div class="flex flex-col gap-2 p-0 bg-white rounded-lg shadow md:p-6">
+                            <div class="flex flex-col gap-2 p-2 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center gap-2">
-                                    <span class="text-5xl font-extrabold text-blue-500">G63 sec</span>
+                                    <span class="text-3xl font-extrabold text-blue-500 md:text-5xl">G63 sec</span>
                                     <span
                                         class="px-2 py-1 ml-2 text-xs font-semibold text-blue-600 bg-blue-100 rounded-full">vs
                                         300 sec</span>
@@ -381,9 +381,9 @@
                             </div>
 
                             <!-- Response Time % vs SLA -->
-                            <div class="flex flex-col gap-2 p-0 bg-white rounded-lg shadow md:p-6">
+                            <div class="flex flex-col gap-2 p-2 bg-white rounded-lg shadow md:p-6">
                                 <div class="flex items-center gap-2">
-                                    <span class="text-4xl font-extrabold text-blue-500">G95%</span>
+                                    <span class="text-2xl font-extrabold text-blue-500 md:text-4xl">G95%</span>
                                     <span
                                         class="px-2 py-1 ml-2 text-xs font-semibold text-blue-600 bg-blue-100 rounded-full">vs
                                         85%</span>
@@ -401,7 +401,7 @@
 
                         <!-- Chart Section -->
 
-                        <div class="flex flex-col justify-center w-full p-6 overflow-x-auto bg-white rounded-lg shadow">
+                        <div class="flex flex-col justify-center w-full p-0 overflow-x-auto bg-white rounded-lg shadow md:p-6">
                             <div id="video-waiting-chart" class="w-full min-w-[360px]"></div>
                         </div>
                     </div>
